--- a/RevViews/RevViews/RevViews.csproj
+++ b/RevViews/RevViews/RevViews.csproj
@@ -261,6 +261,7 @@
     <Content Include="Views\Reviews\Details.cshtml" />
     <Content Include="Views\Reviews\Edit.cshtml" />
     <Content Include="Views\Reviews\Index.cshtml" />
+    <Content Include="Views\Shared\_ReviewsByIDToList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
