--- a/RevViews/RevViews/packages.config
+++ b/RevViews/RevViews/packages.config
@@ -13,9 +13,9 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.5" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net46" developmentDependency="true" />
@@ -25,6 +25,8 @@
   <package id="NLog" version="4.5.3" targetFramework="net46" />
   <package id="NLog.Config" version="4.5.3" targetFramework="net46" />
   <package id="NLog.Schema" version="4.5.3" targetFramework="net46" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
