--- a/RevViews/RevViews/Web.config
+++ b/RevViews/RevViews/Web.config
@@ -102,5 +102,8 @@
     <add name="RevViewsDB2Entities"
          connectionString="metadata=res://*/Models.RevViewsModel.csdl|res://*/Models.RevViewsModel.ssdl|res://*/Models.RevViewsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=aw-ddc-rdb.cl6bwe4obxor.us-east-2.rds.amazonaws.com;initial catalog=RevViewsDB2;persist security info=True;user id=sqladmin;password=simplepass;MultipleActiveResultSets=True;App=EntityFramework&quot;"
          providerName="System.Data.EntityClient" />
+    <add name="RevViewsLocalDB"
+         connectionString="metadata=res://*/Models.RevViewsModel.csdl|res://*/Models.RevViewsModel.ssdl|res://*/Models.RevViewsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data Source=MORT-LAPTOP\SQLEXPRESS;Initial Catalog=RevViewsDB2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
