--- a/RevViews/RevViews/packages.config
+++ b/RevViews/RevViews/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
@@ -27,6 +26,7 @@
   <package id="NLog" version="4.5.4" targetFramework="net46" />
   <package id="NLog.Config" version="4.5.4" targetFramework="net46" />
   <package id="NLog.Schema" version="4.5.4" targetFramework="net46" />
+  <package id="NUnit" version="3.10.1" targetFramework="net46" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net46" />
   <package id="popper.js" version="1.14.3" targetFramework="net46" />
