--- a/RevViews/RevViews/RevViews.csproj
+++ b/RevViews/RevViews/RevViews.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ContactUs.cs" />
     <Compile Include="Models\Restaurant.cs">
       <DependentUpon>RevViewsModel.tt</DependentUpon>
     </Compile>
@@ -312,6 +313,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Shared\_ContactUs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
