--- a/RevViews/Jenkinsfile
+++ b/RevViews/Jenkinsfile
@@ -11,7 +11,7 @@ node('master'){
     stage('analyze') {
         try {
             dir('RevViews') {
-                bat 'SonarQube.Scanner.MSBuild begin /k:Project1_RevViews /o:0.1.0'
+                bat 'SonarQube.Scanner.MSBuild begin /k:Project1_RevViews /d:sonar.organization="silveranstavern-github" /o:0.1.0'
                 bat 'msbuild.exe'
                 bat 'SonarQube.Scanner.MSbuild end'
             }
