--- a/RevViews/Jenkinsfile
+++ b/RevViews/Jenkinsfile
@@ -11,9 +11,9 @@ node('master'){
     stage('analyze') {
         try {
             dir('RevViews') {
-                bat 'SonarQube.Scanner.MSBuild begin /k:Project1_RevViews /d:sonar.organization="silveranstavern-github" /o:0.1.0'
-                bat 'msbuild.exe'
-                bat 'SonarQube.Scanner.MSbuild end'
+                bat 'SonarQube.Scanner.MSBuild.exe begin /k:"Project1_RevViews" /d:sonar.organization="silveranstavern-github"'
+                bat 'MsBuild.exe /t:Rebuild'
+                bat 'SonarQube.Scanner.MSBuild.exe end'
             }
         }
         catch (exc) {
